# Configarr

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: sonarr.yaml.example
src/: __init__.py  main.py  requirements.txt
src/commands/: import_config.py
src/core/: __init__.py  config_schema.py  diff.py  reconciler.py
src/mapping/: __init__.py  custom_formats.py  delay_profiles.py  download_clients.py  indexers.py  media_management.py  naming.py  quality_definitions.py  quality_profiles.py  tags.py
src/plugins/: __init__.py  base.py  registry.py
src/plugins/sonarr/: __init__.py  client.py  plugin.py  schema.py
src/shared/: __init__.py  schemas.py
src/shared/mappers/: __init__.py  base.py  custom_formats.py  delay_profiles.py  download_clients.py  indexers.py  quality_definitions.py  quality_profiles.py  tags.py
src/sonarr_client/: README.md  pyproject.toml  tox.ini
src/sonarr_client/docs/: AddSeriesOptions.md  ApiInfoApi.md  AuthenticationApi.md  AutoTaggingApi.md  AutoTaggingResource.md  BackupResource.md  BlocklistBulkResource.md  CommandResource.md  CustomFilterApi.md  CustomFilterResource.md  CustomFormatApi.md  CustomFormatBulkResource.md  CustomFormatResource.md  DelayProfileApi.md  DelayProfileResource.md  DiskSpaceApi.md  DownloadClientBulkResource.md  DownloadClientConfigResource.md  EpisodeFileApi.md  EpisodeFileListResource.md  HistoryResourcePagingResource.md  HostConfigResource.md  ImportListApi.md  ImportListBulkResource.md  ImportListConfigApi.md  (+50 more)
src/utils/: __init__.py  backup.py  env.py  logger.py  yaml_loader.py
(+160 files in other folders)
