[project]
name = "configarr"
version = "0.1.0"
description = "Declarative configuration-as-code tool for the Arr stack (Sonarr, Radarr, Prowlarr)"
authors = [
    {name = "Bennett Quaritsch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "PyYAML>=6.0.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
    "typing-extensions>=4.15.0",
]

[project.scripts]
configarr = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
